[tool.poetry]
name = "redeye"
version = "0.1.0"
description = ""
authors = ["zarafa <zarafa@zarafa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
praw = "^7.7.1"
click = "^8.1.7"
tabulate = "^0.9.0"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
